--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.7.4",
     "@apollo/react-hooks": "^4.0.0",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.5",
+    "@mui/material": "^5.14.7",
+    "@mui/styled-engine-sc": "^5.14.7",
     "@mui/styles": "^5.11.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-use-scroll-direction": "^0.1.0",
+    "styled-components": "^6.0.7",
     "subscriptions-transport-ws": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
