--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "google-maps-react": "^2.0.6",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "material-ui-animated-fab": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-scripts": "^5.0.1",
     "react-use-scroll-direction": "^0.1.0",
     "styled-components": "^6.0.7",
