--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://icc4203-202320.github.io/p1_3-galvez_pedemonte-p1-3",
+  "homepage": "https://Dioegox.github.io/appsP1.3_mirror",
   "name": "travel_log",
   "version": "0.1.0",
   "private": true,
