--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "google-maps-react": "^2.0.6",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "jszip": "^3.10.1",
     "material-ui-animated-fab": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-image-gallery": "^1.3.0",
     "react-places-autocomplete": "^7.3.0",
     "react-scripts": "^5.0.1",
     "react-use-scroll-direction": "^0.1.0",
